solve the github login error